--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,1 @@
-title: "Writeups"
-description: "CTF Writeups for TryHackMe & Hack The Box"
-remote_theme: foodgy/jekyll-overreacted
-plugins:
-  - jekyll-remote-theme
-  - jekyll-readme-index
-  - jekyll-seo-tag
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-feed
-  - jekyll-archives
-readme_index:
-  enabled: true
-  remove_originals: false
-  with_frontmatter: true
-exclude:
-  - .gitignore
-  - Gemfile
-  - Gemfile.lock
-  - node_modules
-  - vendor
+theme: jekyll-theme-hacker
